añadir thumbnails, cambios menores html y css

--- a/index.html
+++ b/index.html
@@ -94,9 +94,6 @@
         <h1 id="bienvenida">Bienvenido a Digimon List</h1>
       </div>
 
-      <!--------------------Digimon_info------------------------------>
-      <div id="digimon_info"></div>
-
       <!--------------------LISTA------------------------------>
       <div id="lista" class="d-grid mt-15 shadow-lg rounded-2 px-2 pt-5">
         <div class="container d-grid align-content-sm-start row">
@@ -143,6 +140,7 @@
             <tr>
               <th scope="col">#</th>
               <th scope="col">Digimon</th>
+              <th scope="col">Thumbnail</th>
             </tr>
           </thead>
           <tbody class="table" id="tbody"></tbody>
