ajustes a fuente, imagenes, etc

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 
     <title>Digimon List</title>
   </head>
@@ -28,7 +28,7 @@
             ><img
               src="./assets/img/digimon_logo_vector_by_3prsta-d9a4yb9-679245380.png"
               alt="DIGIMON"
-              style="width: 100px"
+              id="navbar-logo"
           /></a>
           <button
             class="navbar-toggler"
@@ -140,6 +140,7 @@
             <tr>
               <th scope="col">#</th>
               <th scope="col">Digimon</th>
+              <th scope="col">Level</th>
               <th scope="col">Thumbnail</th>
             </tr>
           </thead>
