--- a/index.html
+++ b/index.html
@@ -58,28 +58,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
               </li>
-
-              <!------------------------DROPDOWN-------------------------->
-
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
-              </li>
             </ul>
           </div>
         </div>
@@ -156,13 +134,20 @@
           <tbody class="table" id="tbody"></tbody>
         </table>
       </div>
+      <footer>
+        <div>
+          <h4>
+            Digimon Index
+            <a><i class="fa-regular fa-registered"></i></a>
+          </h4>
+        </div>
+      </footer>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
