--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <nav aria-label="Page navigation example ">
           <ul class="pagination justify-content-center">
             <li class="page-item">
-              <a class="page-link" href="#" aria-label="Previous">
+              <a class="page-link" href="#" aria-label="Previous" id="prev">
                 <span aria-hidden="true">&laquo;</span>
               </a>
             </li>
@@ -127,7 +127,7 @@
             <li class="page-item"><a class="page-link" href="#">3</a></li>
             <li class="page-item"><a class="page-link" href="#">4</a></li>
             <li class="page-item">
-              <a class="page-link" href="#" aria-label="Next">
+              <a class="page-link" href="#" aria-label="Next" id="nxt">
                 <span aria-hidden="true">&raquo;</span>
               </a>
             </li>
