--- a/index.html
+++ b/index.html
@@ -55,9 +55,6 @@
                   >Inicio</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
             </ul>
           </div>
         </div>
@@ -93,7 +90,7 @@
               aria-label="Search"
               id="searchbar"
             />
-            <button class="btn btn-outline-dark" type="submit" id="searchbtn">
+            <button class="btn btn-outline-dark" type="click" id="searchbtn">
               Search
             </button>
           </form>
@@ -122,10 +119,6 @@
                 <span aria-hidden="true">&laquo;</span>
               </a>
             </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">4</a></li>
             <li class="page-item">
               <a class="page-link" href="#" aria-label="Next" id="nxt">
                 <span aria-hidden="true">&raquo;</span>
